<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/ivProfilePicture"
        android:layout_width="204dp"
        android:layout_height="204dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="3dp"
        android:background="@null"
        android:contentDescription="@string/profileimg"
        android:visibility="visible"
        tools:src="@tools:sample/avatars"
        tools:srcCompat="@tools:sample/avatars[2]"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnProfileImg"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="59dp"
        android:text="@string/profileimg" />

    <Button
        android:id="@+id/btnFriends"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnProfileImg"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="68dp"
        android:text="@string/Friends" />

    <Button
        android:id="@+id/btnRides"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFriends"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="74dp"
        android:text="@string/Rides" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRides"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="109dp"
        android:text="@string/logout" />

    <CheckBox
        android:id="@+id/cbCheckin"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="42dp"
        android:text="@string/checkin" />


</RelativeLayout>